--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   "dependencies": {
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
-    "react-router": "^3.0.0"
+    "react-router": "^3.0.0",
+    "swiper": "^3.4.0"
   }
 }
